@@ -1,3 +1,9 @@
+2005-03-02  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/19916
+	* varasm.c (initializer_constant_valid_p): Allow conversions
+	between OFFSET_TYPEs.  Tidy.
+
 2005-03-02  Hans-Peter Nilsson  <hp@axis.com>
 
 	* config/cris/cris.md ("return"): Remove epilogue delay list
